# self-play

./: .gitignore  README.md  env_test.py  integration_plan.md  launch_tensorboard.py  pyproject.toml  quantization_plan.md  requirements.txt
reinforcement/: helper.py
src/: utils.py
src/behavior_cloning/: bc_baseline.py  bc_kitchen_agent.keras  bc_render.py
src/data/: README.md  dataloader.py
src/data_utils/: README.md  dataloader.py
src/devin_experiments/: html:css_test.ipynb  html_test.py  minigrid_test.ipynb  minigrid_test.py
src/devin_experiments/cloning/: eval.py  main.py  train.py
src/devin_experiments/cloning/utils/: ac_agent.py  custom_franka_env.py  franka_viewer.py  replay_buffer.py
src/devin_experiments/franka/: 3_franka_env.py  3_sb_franka.py  custom_franka_env.py  dqn_agent.py  dqn_franka_kitchen_model.pth  franka_env.py  qnet.py  sac_train.py  sac_visualize.py  train.py  visualize_policy.py
src/devin_experiments/franka/utils/: custom_franka_env.py  dqn_agent.py  qnet.py  simple_net.py
src/devin_experiments/franka_baseline/: main.py  ppo_baseline.py  sac_baseline.py
src/devin_experiments/franka_baseline/1_regular_env/: dqn_baseline.py  ppo_baseline.py  sac_baseline.py
src/diffusion/: README.md  benchmark_unet.py  diffusion_model_architecture.md  inference.py  inference_demo.py  model.py  test_model.py  train.py  utils.py
src/reinforcement/: bc_render.py  helper.py  rl_testing.ipynb  wrapper_agent.py  wrapper_env.py
tests/: test_image_quality.py
tools/: generate_checkpoint_previews.py  sweep_and_train.py
(+1 files in other folders)
